[project]
name = "neostab"
version = "0.1.1"
description = "yaml-inspired fstab generator"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Sadie K", email = "zulc22.db@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: System",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/zulc22/neostab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
neostab = "neostab:main"

[tool.setuptools]
py-modules = ["neostab"]

[tool.ruff]
line-length = 78
indent-width = 2
fix = true

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
